Improved inference tutorial. Made HuggingFace downloads straightforward.

--- a/inference_tutorial.ipynb
+++ b/inference_tutorial.ipynb
@@ -34,7 +34,12 @@
     "\n",
     "ECG-FM was developed in collaboration with the [fairseq_signals](https://github.com/Jwoo5/fairseq-signals) framework, which implements a collection of deep learning methods for ECG analysis.\n",
     "\n",
-    "Please refer to the [requirements and installation section](https://github.com/Jwoo5/fairseq-signals) of the top-level README.md file."
+    "Please refer to the [requirements and installation section](https://github.com/Jwoo5/fairseq-signals) of the top-level README.md file. After running this, you should install `pandas` and make the environment accessible within this notebook by running:\n",
+    "```\n",
+    "python3 -m pip install --user pandas\n",
+    "python3 -m pip install --user --upgrade jupyterlab ipywidgets ipykernel\n",
+    "python3 -m ipykernel install --user --name ecg_fm\n",
+    "```"
    ]
   },
   {
@@ -69,8 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fairseq_signals_root = \"/cluster/home/t117649uhn/fairseq-signals\"\n",
-    "# fairseq_signals_root = TODO\n",
+    "fairseq_signals_root = # TODO\n",
     "fairseq_signals_root = fairseq_signals_root.rstrip('/')\n",
     "fairseq_signals_root"
    ]
@@ -90,9 +94,40 @@
    "source": [
     "### Download checkpoints\n",
     "\n",
-    "[Download the checkpoints on HuggingFace](https://huggingface.co/wanglab/ecg-fm-preprint) and place them in the `ckpts` folder. Both the pretrained and the finetuned checkpoints must be downloaded to perform inference.\n",
+    "The checkpoints are available on [HuggingFace](https://huggingface.co/wanglab/ecg-fm-preprint). Alternatively, they can be downloaded using the below commands. Both the pretrained and the finetuned checkpoints must be downloaded to perform inference.\n",
     "\n",
     "**Disclaimer: These models are different from those reported in our arXiv paper.** These BERT-Base sized models were trained purely on public data sources due to privacy concerns surrounding UHN-ECG data and patient identification. Validation for the final models will be available upon full publication."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "898c9c4e-e908-4637-8b03-9103417d5201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import hf_hub_download\n",
+    "\n",
+    "_ = hf_hub_download(\n",
+    "    repo_id='wanglab/ecg-fm-preprint',\n",
+    "    filename='mimic_iv_ecg_physionet_pretrained.pt',\n",
+    "    local_dir=os.path.join(root, 'ckpts'),\n",
+    ")\n",
+    "_ = hf_hub_download(\n",
+    "    repo_id='wanglab/ecg-fm-preprint',\n",
+    "    filename='mimic_iv_ecg_physionet_pretrained.yaml',\n",
+    "    local_dir=os.path.join(root, 'ckpts'),\n",
+    ")\n",
+    "_ = hf_hub_download(\n",
+    "    repo_id='wanglab/ecg-fm-preprint',\n",
+    "    filename='physionet_finetuned.pt',\n",
+    "    local_dir=os.path.join(root, 'ckpts'),\n",
+    ")\n",
+    "_ = hf_hub_download(\n",
+    "    repo_id='wanglab/ecg-fm-preprint',\n",
+    "    filename='physionet_finetuned.yaml',\n",
+    "    local_dir=os.path.join(root, 'ckpts'),\n",
+    ")"
    ]
   },
   {
@@ -103,7 +138,9 @@
    "outputs": [],
    "source": [
     "assert os.path.isfile(os.path.join(root, 'ckpts/mimic_iv_ecg_physionet_pretrained.pt'))\n",
-    "assert os.path.isfile(os.path.join(root, 'ckpts/physionet_finetuned.pt'))"
+    "assert os.path.isfile(os.path.join(root, 'ckpts/mimic_iv_ecg_physionet_pretrained.yaml'))\n",
+    "assert os.path.isfile(os.path.join(root, 'ckpts/physionet_finetuned.pt'))\n",
+    "assert os.path.isfile(os.path.join(root, 'ckpts/physionet_finetuned.yaml'))"
    ]
   },
   {
@@ -127,6 +164,7 @@
     "ckpt = torch.load(\n",
     "    os.path.join(root, 'ckpts/physionet_finetuned.pt'),\n",
     "    map_location=torch.device('cpu'),\n",
+    "    weights_only=False,\n",
     ")\n",
     "\n",
     "# Update the pretrained model path\n",
@@ -276,14 +314,8 @@
    "id": "3bb473cb-87e9-4a30-8a49-5eda954d9519",
    "metadata": {},
    "source": [
-    "## 4. Interpret results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "524d721c-058c-42b9-b823-5d8cf4ffba04",
-   "metadata": {},
-   "source": [
+    "## 4. Interpret results\n",
+    "\n",
     "The logits are ordered same as the samples in the manifest and labels in the label definition."
    ]
   },
@@ -470,9 +502,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ecg_env",
+   "display_name": "ecg_fm",
    "language": "python",
-   "name": "ecg_env"
+   "name": "ecg_fm"
   },
   "language_info": {
    "codemirror_mode": {
