Improve inference tutorial.

--- a/inference_tutorial.ipynb
+++ b/inference_tutorial.ipynb
@@ -18,11 +18,7 @@
     "1. Prepare checkpoints\n",
     "2. Prepare data\n",
     "3. Run inference\n",
-    "4. Interpret results\n",
-    "5. Map predictions to another set of label\n",
-    "   - a. Fine-tuning with customized datasets\n",
-    "   - b. Medical image segmentation with text-based prompts\n",
-    "   - c. Medical image segmentation with point-based prompts"
+    "4. Interpret results"
    ]
   },
   {
