Improve installation instructions.

--- a/inference_tutorial.ipynb
+++ b/inference_tutorial.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "ECG-FM was developed in collaboration with the [fairseq_signals](https://github.com/Jwoo5/fairseq-signals) framework, which implements a collection of deep learning methods for ECG analysis.\n",
     "\n",
-    "Please refer to the [requirements and installation section](https://github.com/Jwoo5/fairseq-signals) of the top-level README.md file. After running this, you should install `pandas` and make the environment accessible within this notebook by running:\n",
+    "Clone [fairseq_signals](https://github.com/Jwoo5/fairseq-signals) and refer to the requirements and installation section in the top-level README. After following those steps, install `pandas` and make the environment accessible within this notebook by running:\n",
     "```\n",
     "python3 -m pip install --user pandas\n",
     "python3 -m pip install --user --upgrade jupyterlab ipywidgets ipykernel\n",
