Update tutorial to not require pretrained model.

--- a/inference_tutorial.ipynb
+++ b/inference_tutorial.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "### Download checkpoints\n",
     "\n",
-    "The checkpoints are available on [HuggingFace](https://huggingface.co/wanglab/ecg-fm-preprint). Alternatively, they can be downloaded using the below commands. Both the pretrained and the finetuned checkpoints must be downloaded to perform inference.\n",
+    "The checkpoints are available on [HuggingFace](https://huggingface.co/wanglab/ecg-fm-preprint). Alternatively, they can be downloaded using the below commands.\n",
     "\n",
     "**Disclaimer: These models are different from those reported in our arXiv paper.** These BERT-Base sized models were trained purely on public data sources due to privacy concerns surrounding UHN-ECG data and patient identification. Validation for the final models will be available upon full publication."
    ]
@@ -102,16 +102,6 @@
    "source": [
     "from huggingface_hub import hf_hub_download\n",
     "\n",
-    "_ = hf_hub_download(\n",
-    "    repo_id='wanglab/ecg-fm-preprint',\n",
-    "    filename='mimic_iv_ecg_physionet_pretrained.pt',\n",
-    "    local_dir=os.path.join(root, 'ckpts'),\n",
-    ")\n",
-    "_ = hf_hub_download(\n",
-    "    repo_id='wanglab/ecg-fm-preprint',\n",
-    "    filename='mimic_iv_ecg_physionet_pretrained.yaml',\n",
-    "    local_dir=os.path.join(root, 'ckpts'),\n",
-    ")\n",
     "_ = hf_hub_download(\n",
     "    repo_id='wanglab/ecg-fm-preprint',\n",
     "    filename='physionet_finetuned.pt',\n",
@@ -131,47 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert os.path.isfile(os.path.join(root, 'ckpts/mimic_iv_ecg_physionet_pretrained.pt'))\n",
-    "assert os.path.isfile(os.path.join(root, 'ckpts/mimic_iv_ecg_physionet_pretrained.yaml'))\n",
     "assert os.path.isfile(os.path.join(root, 'ckpts/physionet_finetuned.pt'))\n",
     "assert os.path.isfile(os.path.join(root, 'ckpts/physionet_finetuned.yaml'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "02bf7fe9-91ba-4a44-b834-70d547538388",
-   "metadata": {},
-   "source": [
-    "### Update finetuning checkpoint\n",
-    "\n",
-    "Currently, finetuned checkpoints point to their pretrained counterparts for model loading purposes. We can update this pointer like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bdf1557-f295-414b-9640-b7d078509fee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the finetuned model\n",
-    "ckpt = torch.load(\n",
-    "    os.path.join(root, 'ckpts/physionet_finetuned.pt'),\n",
-    "    map_location=torch.device('cpu'),\n",
-    "    weights_only=False,\n",
-    ")\n",
-    "\n",
-    "# Update the pretrained model path\n",
-    "ckpt['cfg']['model']['model_path'] = os.path.join(\n",
-    "    root,\n",
-    "    'ckpts/mimic_iv_ecg_physionet_pretrained.pt',\n",
-    ")\n",
-    "\n",
-    "# Save the model\n",
-    "torch.save(\n",
-    "    ckpt,\n",
-    "    os.path.join(root, 'ckpts/physionet_finetuned.pt'),\n",
-    ")"
    ]
   },
   {
@@ -506,7 +457,30 @@
    "id": "ed6cece6-a6e0-46c5-b022-7bdeb9ce68ec",
    "metadata": {},
    "source": [
-    "Above, inference is ran through scripts using the hydra client. Loading the models separately is possible like so:"
+    "Models can be loaded model externally (outside of the scripts/hydra client) as shown below.\n",
+    "\n",
+    "Consider this example loading the pretrained model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2a04486-b151-4b06-9b71-9fa9dd3d0c70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import hf_hub_download\n",
+    "\n",
+    "_ = hf_hub_download(\n",
+    "    repo_id='wanglab/ecg-fm-preprint',\n",
+    "    filename='mimic_iv_ecg_physionet_pretrained.pt',\n",
+    "    local_dir=os.path.join(root, 'ckpts'),\n",
+    ")\n",
+    "_ = hf_hub_download(\n",
+    "    repo_id='wanglab/ecg-fm-preprint',\n",
+    "    filename='mimic_iv_ecg_physionet_pretrained.yaml',\n",
+    "    local_dir=os.path.join(root, 'ckpts'),\n",
+    ")"
    ]
   },
   {
@@ -525,32 +499,6 @@
     "pretrained_model_cfg = pretrained_cfg[\"model\"]\n",
     "pretrained_model = build_model(pretrained_model_cfg, task=None)\n",
     "pretrained_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed23b1b2-3aae-401d-8a44-f9088a52c8c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import yaml\n",
-    "from fairseq_signals.models import build_model\n",
-    "\n",
-    "with open(\"ckpts/physionet_finetuned.yaml\" ,\"r\") as f:\n",
-    "  finetuned_cfg = yaml.load(f, yaml.FullLoader)\n",
-    "\n",
-    "finetuned_model_cfg = finetuned_cfg[\"model\"]\n",
-    "finetuned_model = build_model(finetuned_model_cfg, task=None)\n",
-    "finetuned_model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51c04185-5013-4d69-b542-768995a3b8ce",
-   "metadata": {},
-   "source": [
-    "If you are seeing `FileNotFoundError: [Errno 2] No such file or directory: '<REDACTED>'`, please ensure you have run the `Prepare checkpoints` cells above!"
    ]
   }
  ],
