Updated external model loading code in inference notebook.

--- a/inference_tutorial.ipynb
+++ b/inference_tutorial.ipynb
@@ -457,9 +457,30 @@
    "id": "ed6cece6-a6e0-46c5-b022-7bdeb9ce68ec",
    "metadata": {},
    "source": [
-    "Models can be loaded model externally (outside of the scripts/hydra client) as shown below.\n",
-    "\n",
-    "Consider this example loading the pretrained model:"
+    "Outside of the scripts/hydra client, models can be easily loaded as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8ce3df7-d9cd-4211-b85a-71436b1987af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fairseq_signals.models import build_model_from_checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38b6ee04-cceb-427b-9aee-53cb622feb7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_finetuned = build_model_from_checkpoint(\n",
+    "    checkpoint_path=os.path.join(root, 'ckpts/physionet_finetuned.pt')\n",
+    ")\n",
+    "model_finetuned"
    ]
   },
   {
@@ -469,6 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run if the pretrained model hasn't already been downloaded\n",
     "from huggingface_hub import hf_hub_download\n",
     "\n",
     "_ = hf_hub_download(\n",
@@ -490,15 +512,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml\n",
-    "from fairseq_signals.models import build_model\n",
-    "\n",
-    "with open(\"ckpts/mimic_iv_ecg_physionet_pretrained.yaml\" ,\"r\") as f:\n",
-    "  pretrained_cfg = yaml.load(f, yaml.FullLoader)\n",
-    "\n",
-    "pretrained_model_cfg = pretrained_cfg[\"model\"]\n",
-    "pretrained_model = build_model(pretrained_model_cfg, task=None)\n",
-    "pretrained_model"
+    "model_pretrained = build_model_from_checkpoint(\n",
+    "    checkpoint_path=os.path.join(root, 'ckpts/mimic_iv_ecg_physionet_pretrained.pt')\n",
+    ")\n",
+    "model_pretrained"
    ]
   }
  ],
